syntax = "proto3";

package host;

service Handler {
  rpc HandleRequest (HostRequest) returns (HostResponse);
}

message HostRequest {
  string data = 1;
}

message HostResponse {
  string data = 1;
}
